# Medealis_Archiv

./: .dockerignore  .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  ADD_TESSERACT_TO_PATH.bat  ARCHITECTURE_ANALYSIS.md  Add-TesseractToPath.ps1  CACHE_MIGRATION_EXAMPLE.md  CLAUDE.md  DEPLOYMENT_PHASE1.md  DESIGN_MOCKUPS.tsx  DIAGNOSE_SYSTEM.bat  Dockerfile  Dockerfile.bak  EINFACH_STARTEN.bat  ENTERPRISE_DETAILED_MOCKUP.html  INSTALL_OCR.bat  ITEMINFO_QR_IMPLEMENTATION_SUMMARY.md  MEDEALIS_GESAMTPROJEKT_ROADMAP.md  MEDEALIS_MIGRATIONSPLAN.md  Medealis_ERP_Phase3-5_Plan.docx  PERFORMANCE_DEEP_DIVE_ACTIVATED.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE1_SUMMARY.md  PHASE_2_CHATBOT_ROADMAP.md  Plan.docx  Projektstruktur.docx  Purpose and Scope.docx  QUICKSTART_DEPLOYMENT.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPUTER.bat  START_SERVER.bat  STATUS_UPDATE_BUG_FIX.md  TESSERACT_INSTALLATION.md  TEST_USER_LOGIN.md  TYPESCRIPT_MIGRATION_GUIDE.md  (+37 more)
.claude/: settings.json  settings.local.json
.streamlit/: config.toml  secrets.toml
config/: logging_config.py  settings.py
docs/: README.md
mcp-servers/qms_database/: __init__.py  audit.py  config.py  pyproject.toml  server.py
migration_scripts/: 01_check_database_integrity.py  02_add_qr_code_column.py  02_create_postgres_schema.py  03_add_iteminfo_complete_workflow_step.py  03_migrate_data_sqlite_to_postgres.py  04_set_existing_iteminfo_workflow_status.py  05_create_audit_log_table.py  05_fix_iteminfo_workflow_status.py  06_create_users_table.py  07_add_must_change_password_column.py  (+2 more)
(+296 files in other folders)
