[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medealis-qms-mcp-server"
version = "0.1.0"
description = "MCP Server fuer Read-Only Zugriff auf die Medealis QMS Datenbank"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
]
